WS #00: general fix.

--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -8,13 +8,13 @@ button:
       label: Text
       preview: More
   variants:
-    default:
-      label: Default
-    hollow:
-      label: Hollow
+    pink:
+      label: Pink
+    hollow-pink:
+      label: Hollow pink
       description: Inverts colors
-    gray:
-      label: Gray
+    blue:
+      label: Blue
   settings:
     color:
       type: select
