--- a/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.wingsuit.yml
@@ -3,6 +3,11 @@ footer:
   label: Footer
   description: The footer pattern with copyright and menu.
   fields:
+    logo:
+      type: pattern
+      label: Logo
+      preview:
+        id: logo
     menu_1:
       type: pattern
       label: Menu
