--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.wingsuit.yml
@@ -3,6 +3,11 @@ header:
   label: Header
   description: The header pattern with logo and menu.
   fields:
+    logo:
+      type: pattern
+      label: Logo
+      preview:
+        id: logo
     menu:
       type: pattern
       label: Menu
