--- a/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
@@ -88,6 +88,10 @@ grid:
         config_3: ""
         config_4: ""
         config_5: ""
+      configuration:
+        columns:
+          equal:
+            default: 'w-full'
     2_column:
       label: Two Columns
       settings:
@@ -96,6 +100,16 @@ grid:
         config_3: ""
         config_4: ""
         config_5: ""
+      configuration:
+        columns:
+          equal:
+            default: 'flex flex-col w-full md:w-1/2 mb-20'
+            '66x33':
+              1: 'flex flex-col w-full md:w-2/3 mb-20'
+              2: 'flex flex-col w-full md:w-1/3 mb-20'
+            '33x66':
+              1: 'flex flex-col w-full md:w-1/3 mb-20'
+              2: 'flex flex-col w-full md:w-2/3 mb-20'
     3_column:
       label: Three Columns
       settings:
@@ -104,6 +118,10 @@ grid:
         config_2: ""
         config_4: ""
         config_5: ""
+      configuration:
+        columns:
+          equal:
+            default: 'flex flex-col w-full md:w-1/3 mb-20'
     4_column:
       label: Four Columns
       settings:
@@ -112,6 +130,10 @@ grid:
         config_2: ""
         config_3: ""
         config_5: ""
+      configuration:
+        columns:
+          equal:
+            default: 'flex flex-col w-full md:w-1/4 mb-20'
     5_column:
       label: Five Columns
       settings:
@@ -120,4 +142,19 @@ grid:
         config_2: ""
         config_3: ""
         config_4: ""
+      configuration:
+        columns:
+          equal:
+            default: 'flex flex-col w-full sm:w-1/2 md:w-1/5 mb-20'
+  configuration:
+    gap:
+      none:
+        container: ''
+        cell: ''
+      default:
+        container: -mx-6 -md:mx-25
+        cell: px-6 md:px-25
+      large:
+        container: -mx-10 -md:mx-35
+        cell: px-10 md:px-35
   visibility: storybook
