--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.wingsuit.yml
@@ -19,7 +19,7 @@ header:
       label: Button
       preview:
         id: button
-        variant: blue
+        variant: default
   settings:
     has_spacer:
       label: Has spacer
