--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "wait-on": "^4.0.0"
   },
   "dependencies": {
+    "tailwindcss-typography": "^3.1.0",
     "window-size": "^1.1.1"
   }
 }
