--- a/packages/wingsuit/source/default/patterns/04-templates/article/article.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/04-templates/article/article.wingsuit.yml
@@ -20,10 +20,11 @@ article:
       preview:
         faker: lorem.paragraph
     button:
-      type: text
+      type: pattern
       label: Button
       preview:
-        faker: lorem.word
+        id: button
+        variant: default
     more:
       type: text
       label: More articles
