--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -72,6 +72,7 @@
     "yo": "^3.1.1"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.2.0",
     "alpinejs": "^2.7.0",
     "svg4everybody": "^2.1.9",
     "swiper": "^5.4.5",
