--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lint:js": "cross-env NODE_ENV=production eslint --cache --cache-location=.cache/eslint --ext .ts,.tsx,.mjs --report-unused-disable-directives packages",
     "fix:js": "cross-env NODE_ENV=production eslint --fix --cache --cache-location=.cache/eslint --ext .ts,.tsx,.mjs --report-unused-disable-directives",
     "lint:md": "remark -q",
+    "fix:md": "remark . -o",
     "publish:debug": "npm run publish:latest -- --npm-tag=debug --no-push",
     "publish:latest": "lerna publish --exact --concurrency 1 --force-publish",
     "publish:next": "npm run publish:latest -- --npm-tag=next",
