--- a/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
@@ -57,6 +57,9 @@ grid:
       3:
         equal:
           default: 'w-full md:w-1/3'
+        '25x50x25':
+          default: 'w-full md:w-1/4'
+          2: 'w-full md:w-1/2'
       4:
         equal:
           default: 'w-full md:w-1/4'
