WS #00: small fixes and adding description.

--- a/packages/wingsuit/source/default/patterns/01-atoms/link/link.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/link/link.wingsuit.yml
@@ -12,9 +12,9 @@ link:
       type: token
       label: Url
       preview: 'https://github.com/wingsuit-designsystem/wingsuit'
-    svg:
+    icon:
       type: select
-      label: SVG
+      label: Icon
       default_value: right-arrow
       options:
         search: Search
