WS #00: yml description added.

--- a/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
@@ -1,7 +1,7 @@
 alert:
   use: "@atoms/alert/alert.twig"
   label: Alert
-  description: Colorful status, warning and error messages.
+  description: Colorful status, warning and error messages by selecting the right variants for every situation .
   fields:
     header:
       type: text
