--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "@storybook/addons": "^6.0.0",
+    "@storybook/addon-links": "^6.0.0",
     "@storybook/addon-backgrounds": "^6.0.0",
     "@storybook/addon-viewport": "^6.0.0",
     "@storybook/linter-config": "^2.5.0",
@@ -72,8 +74,6 @@
     "yo": "^3.1.1"
   },
   "dependencies": {
-    "@storybook/addon-backgrounds": "^6.0.28",
-    "@storybook/addon-links": "^6.0.28",
     "@tailwindcss/typography": "^0.2.0",
     "alpinejs": "^2.7.0",
     "svg4everybody": "^2.1.9",
