Update container pattern.

--- a/packages/wingsuit/source/default/patterns/03-organisms/container/container.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/03-organisms/container/container.wingsuit.yml
@@ -37,22 +37,41 @@ container:
     padding_top:
       type: select
       label: Padding top
-      description: The padding configuration to the previous element.
+      description: The spacing to the previous element.
       default_value: default
+      options:
+        small: Small
+        default: Default
+        large: Large
+    padding_bottom:
+      type: select
+      label: Padding bottom
+      description: The spacing to the next element.
       options:
         small: Small
         default: Default
         large: Large
     classes:
       type: textfield
-      label: Classes
-      description: Additional CSS classes
+      label: Additional classes
+  configuration:
+    padding_x:
+      default: 'px-6'
+      large: 'px-10'
+    padding_top:
+      small: 'pt-4'
+      default: 'pt-10 md:pt-20'
+      large: 'pt-20 md:pt-24'
     padding_bottom:
-      type: select
-      label: Padding bottom
-      description: If next element has spacing top, use default for normal or small for small spacing betweeen elements.
-      options:
-        small: Small
-        default: Default
-        large: Large
+      small: 'pb-4'
+      default: 'pb-10 md:pb-20'
+      large: 'pb-20 md:pb-24'
+    width:
+      small: 'max-w-800'
+      default: 'max-w-1200'
+      large: 'max-w-1600'
+      xlarge: 'max-w-1900'
+    bg:
+      gray-medium: 'bg-gray-500'
+      gray-light: 'bg-gray-300'
   visibility: storybook
