WS #70: Inline Classes update.

--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -18,19 +18,9 @@ button:
       label: Outline
       configuration:
         colors:
-          primary: 'border-primary text-black hover:bg-pink-600'
-          secondary: 'border-secondary text-black hover:bg-blue-600'
+          primary: 'border border-primary text-black hover:bg-pink-600'
+          secondary: 'border border-secondary text-black hover:bg-blue-600'
       description: Inverts colors
-  configuration:
-    size:
-      text:
-        small: text-xs
-        medium: text-base
-        large: text-xl
-      icon:
-        small: w-4 h-4
-        medium: w-5 h-5
-        large: w-6 h-6
   settings:
     size:
       type: select
