--- a/packages/wingsuit/source/default/patterns/01-atoms/placeholder/placeholder.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/placeholder/placeholder.wingsuit.yml
@@ -31,7 +31,7 @@ placeholder:
     style:
       label: Image style
       type: select
-      preview: 16x9_xxl_sc
+      preview: 16x9_md_sc
       options:
         1x1_xxs_sc: XXSmall 1x1
         8x7_xxs_sc: XSmall 8x7
