--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.wingsuit.yml
@@ -11,7 +11,7 @@ card:
         id: placeholder
         variant: image
         settings:
-          style: card
+          style: 16x9_xxl_sc
     preheadline:
       type: text
       label: Preheadline
