--- a/packages/wingsuit/source/default/patterns/01-atoms/logo/logo.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/logo/logo.wingsuit.yml
@@ -1,5 +1,4 @@
 logo:
   use: "@atoms/logo/logo.twig"
   label: Logo
-  description:  This logo pattern represents the logos of the front page, header or footer ...etc.
-                we can use it by including it in the needed twig templates.
+  description: Simple component to display the site logo.
