--- a/packages/wingsuit/source/default/patterns/01-atoms/video/video.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/video/video.wingsuit.yml
@@ -1,7 +1,7 @@
 video:
   use: "@atoms/video/video.twig"
   label: Video
-  description: Video component.
+  description: Component for displaying self hosted videos.
   fields:
     video:
       type: text
