--- a/packages/wingsuit/source/default/patterns/01-atoms/link/link.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/link/link.wingsuit.yml
@@ -1,7 +1,7 @@
 link:
   use: "@atoms/link/link.twig"
   label: Link
-  description: In order to use this link pattern you have two possibility by providing the URL it can be used to link texts or with out the URL as a normal text with icon or without icon.
+  description: Simple link component with optional icon. You can use this either with an url to display a link, or without to just display text with an icon.
   fields:
     text:
       type: text
