Remove twig dependency.

--- a/packages/pattern/package.json
+++ b/packages/pattern/package.json
@@ -36,8 +36,7 @@
     "faker": "^4.1.0",
     "html-attribute-parser": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "twig": "~1.15.1",
-    "twig-drupal-filters": "^2.0.0",
+    "twing-drupal-filters": "^0.0.1",
     "twing": "^5.0.1"
   },
   "gitHead": "c3da3714569f0e437fb99b3907323541226a44b6"
