Add form fixes and login form.

--- a/packages/wingsuit/source/default/patterns/01-atoms/forms/forms.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/forms/forms.wingsuit.yml
@@ -8,6 +8,14 @@ form_input:
       label: Textfield
       settings:
         attributes: "type=\"text\" placeholder=\"Placeholder\""
+    password:
+      label: Password
+      settings:
+        attributes: "type=\"password\" placeholder=\"Password\""
+    submit:
+      label: Submit
+      settings:
+        attributes: "type=\"text\" placeholder=\"Placeholder\""
     email:
       label: Email
       settings:
