Update slider component.

--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -54,7 +54,7 @@ button:
         primary: Primary
         secondary: Secondary
     url:
-      type: token
+      type: url
       label: Url
       description: The action url of your button
       preview: 'https://github.com/wingsuit-designsystem/wingsuit'
