Add section icon support.

--- a/packages/wingsuit/source/default/patterns/03-organisms/section/section.wingsuit.yml
+++ b/packages/wingsuit/source/default/patterns/03-organisms/section/section.wingsuit.yml
@@ -1,6 +1,7 @@
 section:
   use: "@organisms/section/section.twig"
   label: Section
+  icon_path: ws-assets://images/section-icon.svg
   description: "A section with a headline and maximum five columns. A combination of container and grid.
     You can use this pattern as a section in Drupal's Layout Builder."
   fields:
