--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@wingsuit-designsystem/starter-kit-tailwind",
-  "version": "1.0.0-beta.22",
+  "version": "1.0.0-beta.23",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
+  "private": true,
   "license": "GPL-2.0",
   "author": {
     "name": "KEY-TEC",
@@ -43,11 +44,11 @@
     "@tailwindcss/custom-forms": "^0.2.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@wingsuit-designsystem/cli": "1.0.0-beta.22",
-    "@wingsuit-designsystem/core": "1.0.0-beta.22",
-    "@wingsuit-designsystem/pattern": "1.0.0-beta.22",
-    "@wingsuit-designsystem/preset-tailwind": "1.0.0-beta.22",
-    "@wingsuit-designsystem/storybook": "1.0.0-beta.22",
+    "@wingsuit-designsystem/cli": "1.0.0-beta.23",
+    "@wingsuit-designsystem/core": "1.0.0-beta.23",
+    "@wingsuit-designsystem/pattern": "1.0.0-beta.23",
+    "@wingsuit-designsystem/preset-tailwind": "1.0.0-beta.23",
+    "@wingsuit-designsystem/storybook": "1.0.0-beta.23",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
@@ -79,5 +80,5 @@
     "swiper": "^5.4.5",
     "tailwindcss": "^1.7.0"
   },
-  "gitHead": "c3da3714569f0e437fb99b3907323541226a44b6"
+  "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4"
 }
