--- a/presets/scss/package.json
+++ b/presets/scss/package.json
@@ -27,9 +27,12 @@
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
+    "node-sass": "^5.0.0",
     "@wingsuit-designsystem/core": "1.0.0-beta.24",
-    "fs-extra": "^9.0.0",
-    "jsondiffpatch": "^0.3.11"
+    "mini-css-extract-plugin": "^1.3.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "glob": "^7.1.6",
+    "sass-loader": "^10.1.0"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
