--- a/starter-kits/bootstrap/package.json
+++ b/starter-kits/bootstrap/package.json
@@ -48,6 +48,7 @@
     "@wingsuit-designsystem/core": "1.0.0-beta.26",
     "@wingsuit-designsystem/pattern": "1.0.0-beta.26",
     "@wingsuit-designsystem/storybook": "1.0.0-beta.26",
+    "@wingsuit-designsystem/preset-scss": "1.0.0-beta.26",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
