--- a/starter-kits/bootstrap/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/starter-kits/bootstrap/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -12,14 +12,14 @@ button:
       label: Default
       configuration:
         colors:
-          primary: 'bg-primary text-white hover:bg-pink-600'
-          secondary: 'bg-secondary text-black hover:bg-blue-600'
+          primary: 'btn-primary'
+          secondary: 'btn-secondary'
     outline:
       label: Outline
       configuration:
         colors:
-          primary: 'border-primary text-black hover:bg-pink-600 hover:text-white'
-          secondary: 'border-secondary text-black hover:bg-blue-600 hover:text-white'
+          primary: 'btn-outline-primary'
+          secondary: 'btn-outline-secondary'
       description: Inverts colors
   configuration:
     size:
