--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -41,6 +41,8 @@
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/pattern": "1.0.0-beta.26",
     "prop-types": "^15.7.2",
+    "polished": "^4.0.5",
+    "react-syntax-highlighter": "^15.3.1s",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
