--- a/starter-kits/bootstrap/package.json
+++ b/starter-kits/bootstrap/package.json
@@ -47,8 +47,8 @@
     "@wingsuit-designsystem/cli": "1.0.0-beta.26",
     "@wingsuit-designsystem/core": "1.0.0-beta.26",
     "@wingsuit-designsystem/pattern": "1.0.0-beta.26",
-    "@wingsuit-designsystem/storybook": "1.0.0-beta.26",
     "@wingsuit-designsystem/preset-scss": "1.0.0-beta.26",
+    "@wingsuit-designsystem/storybook": "1.0.0-beta.26",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
@@ -64,6 +64,7 @@
     "eslint-plugin-vue": "^6.0.1",
     "lodash": "^4.17.20",
     "postcss-nested": "^4.2.1",
+    "postcss-scss": "^3.0.4",
     "prettier": "^1.19.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
