--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -30,13 +30,13 @@
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
-    "@storybook/addon-docs": "^6.0.0-beta.6",
-    "@storybook/addon-knobs": "^6.0.0-beta.6",
-    "@storybook/client-api": "^6.0.0-beta.6",
-    "@storybook/components": "^6.0.0-beta.6",
+    "@storybook/addon-docs": "^6.1.0",
+    "@storybook/addon-knobs": "^6.1.0",
+    "@storybook/client-api": "^6.1.0",
+    "@storybook/components": "^6.1.0",
     "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^6.0.0-beta.6",
-    "@storybook/theming": "^6.0.0-beta.6",
+    "@storybook/react": "^6.1.0",
+    "@storybook/theming": "^6.1.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/pattern": "1.0.0-beta.26",
