(Feature) Add global webpack namespaces wsdesignsystem and wspatterns.

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.wingsuit.yml
@@ -12,8 +12,8 @@ button:
       label: Default
       configuration:
         colors:
-          primary: 'bg-primary text-white hover:bg-pink-600'
-          secondary: 'bg-secondary text-black hover:bg-blue-600'
+          primary: 'border-primary bg-primary text-white hover:bg-pink-600'
+          secondary: 'border-secondary bg-secondary text-black hover:bg-blue-600'
     outline:
       label: Outline
       configuration:
