WS-00: grid adn container fix .

--- a/starter-kits/bootstrap/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
+++ b/starter-kits/bootstrap/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
@@ -31,7 +31,7 @@ banner:
         id: placeholder
         variant: image
         settings:
-          style: banner
+          style: article
     headline:
       type: text
       label: Headline
