--- a/starter-kits/bootstrap/source/default/patterns/03-organisms/container/container.wingsuit.yml
+++ b/starter-kits/bootstrap/source/default/patterns/03-organisms/container/container.wingsuit.yml
@@ -56,21 +56,21 @@ container:
       label: Additional classes
   configuration:
     padding_x:
-      default: 'px-6'
-      large: 'px-10'
+      default: 'px-3'
+      large: 'px-5'
     padding_top:
-      small: 'pt-4'
-      default: 'pt-10 md:pt-20'
-      large: 'pt-20 md:pt-24'
+      small: 'pt-2'
+      default: 'pt-3 pt-md-4'
+      large: 'pt-4 pt-md-5'
     padding_bottom:
-      small: 'pb-4'
-      default: 'pb-10 md:pb-20'
-      large: 'pb-20 md:pb-24'
+      small: 'pb-2'
+      default: 'pb-3 pb-md-4'
+      large: 'pb-4 pb-md-5'
     width:
-      small: 'max-w-800'
-      default: 'max-w-1200'
+      small: 'container-sm'
+      default: 'container-lg'
       large: 'max-w-1600'
-      xlarge: 'max-w-1920'
+      xlarge: 'container-xl'
     bg:
       gray-medium: 'bg-gray-500'
       gray-light: 'bg-gray-300'
