--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -41,15 +41,15 @@
     "@storybook/addons": "^6.1.0",
     "@storybook/linter-config": "^2.5.0",
     "@storybook/react": "^6.1.0",
-    "@tailwindcss/custom-forms": "^0.2.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "1.0.0-beta.27",
     "@wingsuit-designsystem/core": "1.0.0-beta.27",
     "@wingsuit-designsystem/pattern": "1.0.0-beta.27",
-    "@wingsuit-designsystem/preset-tailwind": "1.0.0-beta.27",
+    "@wingsuit-designsystem/preset-tailwind2": "1.0.0-beta.27",
     "@wingsuit-designsystem/storybook": "1.0.0-beta.27",
     "autoprefixer": "^9.7.4",
+    "postcss": "^7",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
@@ -74,11 +74,11 @@
     "yo": "^3.1.1"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.2.0",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "alpinejs": "^2.7.0",
     "svg4everybody": "^2.1.9",
     "swiper": "^5.4.5",
-    "tailwindcss": "^1.7.0"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4"
 }
