--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -49,7 +49,6 @@
     "@wingsuit-designsystem/preset-tailwind2": "1.0.0-beta.27",
     "@wingsuit-designsystem/storybook": "1.0.0-beta.27",
     "autoprefixer": "^9.7.4",
-    "postcss": "^7",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
@@ -63,6 +62,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.0.1",
     "lodash": "^4.17.20",
+    "postcss": "^7",
     "postcss-nested": "^4.2.1",
     "prettier": "^1.19.1",
     "react": "^16.13.1",
@@ -74,7 +74,8 @@
     "yo": "^3.1.1"
   },
   "dependencies": {
-    "@tailwindcss/custom-forms": "^0.2.1",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.3.1",
     "alpinejs": "^2.7.0",
     "svg4everybody": "^2.1.9",
     "swiper": "^5.4.5",
