--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -21,7 +21,9 @@
   "scripts": {
     "dev:storybook": "start-storybook --config-dir apps/storybook",
     "build:storybook": "build-storybook --config-dir apps/storybook -o ./dist/app-storybook",
-    "build-storybook": "build-storybook",
+    "docs:storybook": "build-storybook --docs --config-dir apps/storybook -o ./dist/app-storybook",
+    "build-storybook": "build-storybook ",
+    "deploy:storybook": "storybook-to-ghpages --existing-output-dir ./dist/app-storybook",
     "dev:drupal": "cross-env-shell NODE_ENV=development \"webpack --watch --config ./apps/drupal/webpack.config.js\"",
     "build:drupal": "cross-env-shell NODE_ENV=production \"webpack  --config ./apps/drupal/webpack.config.js\"",
     "lint:js": "eslint --ext .js ./",
@@ -41,6 +43,7 @@
     "@storybook/addons": "^6.1.0",
     "@storybook/linter-config": "^2.5.0",
     "@storybook/react": "^6.1.0",
+    "@storybook/storybook-deployer": "^2.8.7",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "1.0.0-beta.28",
